--- a/style.css
+++ b/style.css
@@ -46,6 +46,159 @@ button {
 .container {
   width: 100%;
 }
+.contact{
+  min-height: 100vh;
+  text-align: center;
+  background:linear-gradient(rgba(159, 192, 211, 0.7),rgba(66, 148, 185, 0.7)), url(../images/contact.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  padding:1rem;
+  padding-top: 8rem;
+}
+
+.contact .heading{
+  background:rgba(0,0,0,.5);
+  color:#fff;
+}
+
+.contact .title{
+  color:#fff;
+}
+
+.contact form{
+  width:85%;
+  margin:1rem auto;
+}
+
+.contact form .inputBox{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact form .inputBox input, .contact form textarea{
+  height:4rem;
+  width:49%;
+  padding:0 1rem;
+  margin:1rem 0;
+  font-size: 2rem;
+  border:.2rem solid #eee;
+  background:none;
+  text-transform: none;
+  color:#fff;
+}
+
+.contact form .inputBox input::placeholder, .contact form textarea::placeholder{
+  color:#ccc;
+}
+
+.contact form .inputBox input:focus, .contact form textarea:focus{
+  border-color:var(--blue);
+}
+
+.contact form textarea{
+  height:20rem;
+  width:100%;
+  padding:1rem;
+  resize: none;
+}
+
+.contact form .btn:hover{
+  background:#fff;
+  color:#333;
+}
+.footer{
+  background:#eee;
+}
+
+.footer .box-container{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.footer .box-container .box{
+  flex:1 1 30rem;
+  margin:2rem;
+}
+
+.footer .box-container .box h3 {
+  font-size: 2.5rem;
+  color:var(--blue);
+}
+
+.footer .box-container .box p{
+  font-size: 1.5rem;
+  color:#333;
+  padding:1rem 0;
+}
+
+.footer .box-container .box p i{
+  padding:0 .5rem;
+  color:var(--blue);
+}
+
+.footer .box-container .box:nth-child(2){
+  text-align: center;
+}
+
+.footer .box-container .box a{
+  font-size: 1.8rem;
+  display:block;
+  color:#333;
+  padding:.5rem 0;
+}
+
+.footer a:hover{
+  text-decoration: underline;
+}
+
+.nocap {
+  text-transform: none;
+}
+
+/* media queries  */
+
+@media (max-width:768px){
+
+  html{
+      font-size: 55%;
+  }
+
+  header #menu{
+      display: block;
+  }
+  
+  header .navbar {
+      position: fixed;
+      top:-120%; left:0;
+      width:100%;
+      background:#fff;
+      opacity: 0;
+  }
+
+  .fa-times{
+      transform: rotate(180deg);
+  }
+
+  header .navbar.nav-toggle{
+      top:7.4rem;
+      opacity: 1;
+  }
+
+  .home .content{
+      text-align: center;
+  }
+
+  .features .description{
+      width:auto;
+      padding:1rem;
+  }
+
+  .contact form{
+      width:95%;
+  }
 @media screen and (min-width: 1040px) {
   .container {
     width: 1040px;
